<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/welcome_dept_100"
            android:textColor="#E61515"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/product_name"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:clickable="false"
                        android:hint="@string/lego_star_wars"
                        android:inputType="text"
                        android:text="@string/lego_star_wars"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/price"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/_89_99"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/sales_price"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etSalesPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/_79_99"
                        android:textColor="#E11313"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/description"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/star_wars_lego_set"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/quantity"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/_15"
                        android:inputType="number"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/upc_number"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etUPCNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:clickable="false"
                        android:hint="@string/_912505325260"
                        android:inputType="number"
                        android:text="@string/_912505325260"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/sales_date"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etBeginSalesDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/_26_12_21"
                        android:inputType="date"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/etEndSalesDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/_31_12_21"
                        android:inputType="date"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="113dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/sales"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/rgSalesHolidays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:checkedButton="@id/rb2">

                        <RadioButton
                            android:id="@+id/rb1"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:text="@string/black_friday" />

                        <RadioButton
                            android:id="@+id/rb2"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:text="@string/boxing_day" />

                        <RadioButton
                            android:id="@+id/rb3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sale" />
                    </RadioGroup>

                </LinearLayout>

                <Button
                    android:id="@+id/btnSearchByName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:text="Search By Name"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:text="Submit"
                    android:textSize="30sp" />

            </LinearLayout>
        </ScrollView>



    </LinearLayout>
</layout>